# spice-crypt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  REUSE.toml  SPECIFICATION.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
SPECIFICATIONS/: ltspice.md  pspice-attack-summary.md  pspice.md
scripts/: check_version.py
spice_crypt/: __init__.py  _aes.py  _constants.py  _des_base.py  binary_file.py  cli.py  crypto_state.py  decrypt.py  des.py
spice_crypt/ltspice/: __init__.py  binary_file.py  crypto_state.py  decrypt.py  des.py
spice_crypt/pspice/: __init__.py  _aes_brute.rs  attack.py  decrypt.py  des.py  keys.py
tests/: __init__.py  conftest.py  test_ltspice_decrypt.py  test_pspice_decrypt.py
tests/data/: ltspice.lib
tests/data/pspice/: mode0.lib  mode2.lib  mode3.lib  mode4.lib  mode4_userkey.lib  plaintext.lib
