# SPDX-FileCopyrightText: © 2026 Joe T. Sylve, Ph.D. <joe.sylve@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "spice-crypt"
version = "2.0.3"
description = "A library for decrypting LTspice® and PSpice® encrypted files"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Joe T. Sylve, Ph.D.", email = "joe.sylve@gmail.com" },
]
keywords = ["ltspice", "pspice", "spice", "decryption", "eda", "circuit-simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/jtsylve/spice-crypt"
Repository = "https://github.com/jtsylve/spice-crypt"
Issues = "https://github.com/jtsylve/spice-crypt/issues"

[project.scripts]
spice-crypt = "spice_crypt.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "spice_crypt.pspice._aes_brute"
python-source = "."

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["RUF012"]
